	* In JackCoreAudioDriver::OpenAUHAL, correct stream format setup and cleanup. 
	* Correct crash bug in JackAudioAdapterInterface when not input is used in adapter (temporary fix...)
	* Sync JackCoreAudioAdapter code on JackCoreAudioDriver one.
	* JACK_SCHED_POLICY switched to SCHED_FIFO.

2009-10-29 Stephane Letz  <letz@grame.fr>

	* In JackCoreAudioDriver::Start, wait for the audio driver to effectively start (use the MeasureCallback).

2009-10-28 Stephane Letz  <letz@grame.fr>

	* In JackCoreAudioDriver, force the SR value to the wanted one *before* creating aggregate device (otherwise creation will fail). 
	* In JackCoreAudioDriver, better cleanup of AD when intermediate open failure.

2009-10-27 Stephane Letz  <letz@grame.fr>

	* Dynamic system version detection in JackCoreAudioDriver to either create public or private aggregate device.

2009-10-26 Stephane Letz  <letz@grame.fr>

	* Implement "hog mode" (exclusive access of the audio device) in JackCoreAudioDriver.
	* Fix jack_set_sample_rate_callback to have he same behavior as in JACK1.

2009-10-25 Stephane Letz  <letz@grame.fr>

	* Improve aggregate device management in JackCoreAudioDriver : now a "private" device only and cleanup properly.
	* Aggregate device code added to JackCoreAudioAdapter.

2009-10-23 Stephane Letz  <letz@grame.fr>

	* Correct JackProcessSync::LockedTimedWait.
	* Correct JACK_MESSAGE_SIZE value, particularly in OSX RPC code.
	* Now start server channel thread only when backend has been started (so in JackServer::Start). Should solve race conditions at start time.
	* jack_verbose moved to JackGlobals class.

2009-10-22 Stephane Letz  <letz@grame.fr>

	* Correct jackdmp.cpp (failures case were not correct..). Improve JackCoreAudioDriver code. Raise default port number to 2048.

2009-10-20 Stephane Letz  <letz@grame.fr>

	* Add a string parameter to server ==> client notification, add a new JackInfoShutdownCallback type.